tests/specs/check/unstable_suggestion/no_default_lib.ts
/// <reference no-default-lib="true" />
/// <reference lib="es5" />
/// <reference lib="dom" />

console.log(Deno);
